# distributions_package

./: .gitignore  .pypirc  README.md  pyproject.toml  requirements.txt  setup.py  test.py
dist_gb/: LICENSE
dist_gb.egg-info/: PKG-INFO  SOURCES.txt
dist_gb/src/: Binomialdistribution.py
distributions/: Binomialdistribution.py
